--- a/nita front end bootcamp/W4/D2/positioning/positioning.css
+++ b/nita front end bootcamp/W4/D2/positioning/positioning.css
@@ -9,7 +9,7 @@
   height: 100px;
   border-radius: 50%;
   position: absolute;
-  top: 150px;
+  top: 170px;
   left: 100px;
 }
 .yellowgreen-rounded-rectangle {
@@ -18,4 +18,16 @@
   width: 300px;
   height: 200px;
   /* border-radius: 20%; */
+}
+p.x{
+    position: absolute;
+    color: white;  
+    top: 190px;
+    left: 120px;
+}
+p{
+    position: absolute;
+    color: black;  
+    left: 110px;
+    z-index: 1;
 }
