--- a/nita front end bootcamp/W4/D2/positioning/positioning.css
+++ b/nita front end bootcamp/W4/D2/positioning/positioning.css
@@ -9,8 +9,8 @@
   height: 100px;
   border-radius: 50%;
   position: absolute;
-  top: 170px;
-  left: 100px;
+  top: 10rem;
+  left: 5rem;
 }
 .yellowgreen-rounded-rectangle {
   background-color: yellowgreen;
@@ -21,8 +21,8 @@
 }
 p.x {
   color: white;
-  top: 190px;
-  left: 120px;
+  top: 11rem;
+  left: 6rem;
 }
 p {
   position: absolute;
@@ -46,14 +46,14 @@ p {
   top: 470px;
   left: 100px;
 }
-h3{
-    position: absolute;
-    color: black;
-    left: 110px;
-    top: 490px;
-    z-index: 1;
-  }
-  
+h3 {
+  position: absolute;
+  color: black;
+  left: 110px;
+  top: 490px;
+  z-index: 1;
+}
+
 /* end palau flag */
 
 /* start japan flag */
@@ -72,11 +72,75 @@ h3{
   top: 700px;
   left: 100px;
 }
-h3.japan-title{
-    position: absolute;
-    color: black;
-    left: 130px;
-    top: 720px;
-    z-index: 1;
-  }
+h3.japan-title {
+  left: 130px;
+  top: 720px;
+  z-index: 1;
+}
 /* end japan flag */
+
+/* start ukraine flag */
+.yellow-box {
+  background-color: yellow;
+  width: 300px;
+  height: 100px;
+}
+#blue {
+  background-color: blue;
+  width: 300px;
+  height: 100px;
+}
+h3.ukraine-title {
+  left: 130px;
+  top: 930px;
+  color: rgb(17, 2, 2);
+}
+
+/* end ukraine flag */
+
+/* start latvia flag */
+.white-box {
+  background-color: rgb(255, 255, 255);
+  width: 300px;
+  height: 50px;
+}
+.latvia {
+  background-color: rgb(109, 9, 9);
+  width: 300px;
+  height: 100px;
+}
+h3.latvia-name {
+  left: 130px;
+  top: 1180px;
+  color: rgb(17, 2, 2);
+}
+/* end latvia flag */
+
+/* start nigeria flag */
+
+.white-box-n {
+  background-color: rgb(255, 255, 255);
+  width: 100px;
+  height: 300px;
+  position: absolute;
+  left: 100px;
+}
+.nigeria {
+  background-color: rgb(9, 109, 26);
+  width: 100px;
+  height: 300px;
+  position: absolute;
+}
+.nigeria2 {
+  background-color: rgb(9, 109, 26);
+  width: 100px;
+  height: 300px;
+  position: absolute;
+  left: 200px;
+}
+h3.nigeria-name {
+  left: 130px;
+  top: 1450px;
+  color: rgb(17, 2, 2);
+}
+/* end nigeria flag */
