--- a/nita front end bootcamp/W4/D2/Float Layout/floatLayout.css
+++ b/nita front end bootcamp/W4/D2/Float Layout/floatLayout.css
@@ -1,9 +1,9 @@
 * {
   box-sizing: border-box;
+  margin: 0px;
 }
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  margin: 0px;
 }
 header,
 footer {
@@ -12,8 +12,10 @@ footer {
   padding: 30px;
   text-align: center;
 }
-section {
-  
+section::after {
+  content: "";
+  display: table;
+  clear: both;
 }
 ul,
 a,
@@ -24,11 +26,17 @@ li {
   color: rgb(0, 0, 0);
   line-height: 100px;
 }
-nav{
-    float: left ;
-    width: 30%;
-    height: 450px;
+nav {
+  width: 30%;
+  float: left;
 }
 article {
-    padding-left: 20px;
+  padding-left: 10px;
+}
+@media (mzx-width: 600px) {
+  nav,
+  active {
+    width: 100%;
+    height: auto;
+  }
 }
