--- a/nita front end bootcamp/W4/D2/positioning/positioning.css
+++ b/nita front end bootcamp/W4/D2/positioning/positioning.css
@@ -101,7 +101,7 @@ h3.ukraine-title {
 /* start latvia flag */
 .white-box {
   background-color: rgb(255, 255, 255);
-  width: 300px;
+  width: 100px;
   height: 50px;
 }
 .latvia {
@@ -118,25 +118,14 @@ h3.latvia-name {
 
 /* start nigeria flag */
 
-.white-box-n {
-  background-color: rgb(255, 255, 255);
-  width: 100px;
-  height: 300px;
-  position: absolute;
-  left: 100px;
-}
 .nigeria {
-  background-color: rgb(9, 109, 26);
-  width: 100px;
-  height: 300px;
-  position: absolute;
+  display: flex;
+  flex-direction: row;
 }
 .nigeria2 {
   background-color: rgb(9, 109, 26);
   width: 100px;
   height: 300px;
-  position: absolute;
-  left: 200px;
 }
 h3.nigeria-name {
   left: 130px;
