edit coffee beans style  added

--- a/nita front end bootcamp/W4/D3/coffeeBeans/style.css
+++ b/nita front end bootcamp/W4/D3/coffeeBeans/style.css
@@ -4,6 +4,14 @@
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+@media only screen and (max-width: 600px) {
+  #img {
+    display: none;
+  }
+}
+iframe {
+  width: 700px;
+}
 #logo {
   width: 190px;
   height: 150px;
@@ -20,10 +28,6 @@
 }
 body {
   background-color: F5F5F5;
-  /* background-image: url("./index/photo-1587734195503-904fca47e0e9-removebg-preview\ 1.png");
-  background-repeat: no-repeat;
-  background-position: right;
-  background-attachment: fixed; */
 }
 
 footer {
@@ -38,7 +42,6 @@ footer {
   z-index: -1;
 }
 footer > img {
-  text-align: center;
   padding-left: 20%;
 }
 section {
@@ -49,23 +52,24 @@ section > p {
   text-align: justify;
   padding-left: 100px;
   color: #4c3610;
-  cursor:text;
-
 }
 .gridParent {
-  padding: 10px;
-  display: grid;
-  grid-template-columns: auto auto auto;
-  display: flex;
-  position: absolute;
-  left: 45em;
-  top: 35em;
-  cursor:wait;
-
+  display: flex; /* show in one row*/
+  justify-content: left;
+  padding-left: 350px;
 }
-#img{
+.gridItem {
+  width: 10%;
+  object-fit: contain;
+  mix-blend-mode: color-burn; /* remove bg*/
+}
+#img {
   z-index: 1;
   position: absolute;
-  left: 54%;
+  left: 625px;
   bottom: 0;
+  width: 800px;
+  padding: 0px;
+  float: right;
+  margin: 0 0 0 15px;
 }
