--- a/nita front end bootcamp/W4/D3/coffeeBeans/style.css
+++ b/nita front end bootcamp/W4/D3/coffeeBeans/style.css
@@ -1,8 +1,7 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 #logo {
   width: 190px;
@@ -10,7 +9,9 @@
 }
 .navParent {
   display: flex;
+  font-size: large;
 }
+
 .navItem {
   padding-left: 50px;
   padding-top: 50px;
@@ -18,12 +19,11 @@
   color: #4c2510;
   color: #4c2510;
 }
+.navItem:hover {
+  text-decoration: underline;
+}
 body {
   background-color: F5F5F5;
-  /* background-image: url("./index/photo-1587734195503-904fca47e0e9-removebg-preview\ 1.png");
-  background-repeat: no-repeat;
-  background-position: right;
-  background-attachment: fixed; */
 }
 
 footer {
@@ -49,8 +49,7 @@ section > p {
   text-align: justify;
   padding-left: 100px;
   color: #4c3610;
-  cursor:text;
-
+  cursor: text;
 }
 .gridParent {
   padding: 10px;
@@ -60,10 +59,9 @@ section > p {
   position: absolute;
   left: 45em;
   top: 35em;
-  cursor:wait;
-
+  cursor: wait;
 }
-#img{
+#img {
   z-index: 1;
   position: absolute;
   left: 54%;
